welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: type mismatch;
 found   : Unit
 required: Boolean
 	 	if (vuBiscuit=true){
                             ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit==false){
  ^